syntax = "proto3";

package user;

service UserService {
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetProfile (GetProfileRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (UserIdRequest) returns (DeleteResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string lastName = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetProfileRequest {
  string userId = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  string lastName = 5;
}

message UserIdRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string lastName = 4;
}

message LoginResponse {
  string accessToken = 1;
}
